<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:title="@string/trip_map_view_menu_item_title"
        android:id="@+id/view_map_item"
        android:icon="@android:drawable/ic_menu_mapmode"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:title="@string/trip_view_details_menu_item_title"
        android:id="@+id/view_details_item"
        android:icon="@drawable/ic_info_outline_white_24px"
        app:showAsAction="ifRoom">
    </item>

</menu>