<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_landmark_details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.keeptrip.keeptrip.landmark.fragment.LandmarkDetailsFragment">

    <!-- ~~~~~~~~~~~~~~~~~~ Title ~~~~~~~~~~~~~~~~~~~ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/FormDetailLabel"
            android:text="@string/landmark_details_title_text" />

        <EditText
            android:id="@+id/landmark_details_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/detail_text_size_medium"
            android:maxLines="1"
            android:inputType="text"/>

    </LinearLayout>

    <!-- ~~~~~~~~~~~~~~~~~~ Photo ~~~~~~~~~~~~~~~~~~~ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="">

        <TextView
            style="@style/FormDetailLabel"
            android:text="@string/landmark_details_photo_text"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/landmark_details_photo_image_view"
            android:layout_width="230dp"
            android:layout_height="100dp"
            android:src="@drawable/default_no_image"/>

        <ImageButton
            android:id="@+id/landmark_details_camera_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:src="@mipmap/camera_button_image"/>

    </LinearLayout>

    <!-- ~~~~~~~~~~~~~~~~~~ Date ~~~~~~~~~~~~~~~~~~~ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/FormDetailLabel"
            android:text="@string/landmark_details_date_text" />

        <EditText
            android:id="@+id/landmark_details_date_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/detail_text_size_medium"
            android:focusable="false"/>

    </LinearLayout>

    <!-- ~~~~~~~~~~~~~~~~~~ Location ~~~~~~~~~~~~~~~~~~~ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/FormDetailLabel"
            android:text="@string/landmark_details_location_text" />

        <EditText
            android:id="@+id/landmark_details_location_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/detail_text_size_medium"
            android:maxLines="1"
            android:inputType="text"/>

    </LinearLayout>

    <!-- ~~~~~~~~~~~~~~~~~~ Type ~~~~~~~~~~~~~~~~~~~ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/FormDetailLabel"
            android:text="@string/landmark_details_type_text" />

        <Spinner
            android:id="@+id/landmark_details_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="@dimen/detail_text_size_medium"/>

    </LinearLayout>

<!-- ~~~~~~~~~~~~~~~~~~ Description ~~~~~~~~~~~~~~~~~~~ -->
<TextView
    style="@style/FormDetailLabel"
    android:text="@string/landmark_details_description_text" />

<EditText
    android:id="@+id/landmark_details_description_edit_text"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="4"
    android:gravity="start"
    android:textSize="@dimen/detail_text_size_medium" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/error_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:focusable="false"
        android:background="@android:color/transparent"
        android:layout_marginBottom="40dp"
        android:paddingRight="16dp"/>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.keeptrip.keeptrip.trip.fragment.TripsListFragment">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/landmark_details_floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="4dp"
            android:src="@drawable/ic_done_black_24dp" />

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>

</LinearLayout>
